--- a/src/Home.css
+++ b/src/Home.css
@@ -760,10 +760,13 @@ animation: popIn 1.2s ease forwards;
 .family-bg::before{
   background-image: url('./background.jpg');
 }
+.about {
+  margin-bottom: 6rem;
+}
 /* Contact Section */
 .contact {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   padding: 5rem 1rem;
   color: #fff;
   display: flex;
@@ -818,6 +821,8 @@ z-index: -1; /* Keep it behind the content */
   display: grid;
   gap: 1.5rem;
   text-align: left;
+  margin-top: 2rem;
+
 }
 
 .contact input,
