--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -689,6 +689,13 @@ animation: popIn 1.2s ease forwards;
   transform: scale(1.4);
   z-index: 10;
 }
+@media screen and (max-width: 600px) {
+  .image-card:hover {
+    transform: scale(1.2);
+    z-index: 10;
+  }
+  
+}
 
 /* About Section */
 .about {
@@ -883,7 +890,7 @@ animation: popIn 1.2s ease forwards;
 /* Contact Section */
 .contact {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   padding: 5rem 1rem;
   color: #fff;
   display: flex;
